--- a/.github/workflows/connector_integration_test_single_dagger.yml
+++ b/.github/workflows/connector_integration_test_single_dagger.yml
@@ -52,7 +52,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.STATUS_API_AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.STATUS_API_AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: "us-east-2"
-          CI_GIT_BRANCH: "augustin/poc/ci-python"
+          CI_GIT_BRANCH: "augustin/poc/ci-in-python"
           TEST_REPORTS_BUCKET_NAME: "airbyte-connector-build-status"
   stop-runner:
     name: "Connectors Integration Test: Stop Build EC2 Runner"
